FIX 175992 Date display is truncated

--- a/skins/default/datetime.scss
+++ b/skins/default/datetime.scss
@@ -23,7 +23,7 @@ input.datetime {
 li.date_time.object {
 
 	&:not(.show-seconds):not(.show-time) input.datetime {
-		width: 82px;
+		width: 100px;
 	}
 
 	&.show-seconds input.datetime {
